--- a/healnext/src/app/signup/stylesheet2signup.css
+++ b/healnext/src/app/signup/stylesheet2signup.css
@@ -92,7 +92,7 @@ input[type="email"],
 input[type="password"] {
     width: 560px;
     margin: 10px;
-    height: 40px;:
+    height: 40px;
     border: 2px solid black;
     border-radius: 10px;
     box-sizing: border-box;
