--- a/healnext/src/app/login/login.css
+++ b/healnext/src/app/login/login.css
@@ -49,7 +49,7 @@ input[type="email"],
 input[type="password"] {
     width: 200%;
     margin: 10px;
-    height: 40px;:
+    height: 40px;
     border: 2px solid black;
     border-radius: 10px;
     box-sizing: border-box;
