--- a/healnext/src/app/styles.css
+++ b/healnext/src/app/styles.css
@@ -48,25 +48,29 @@ h1,h2{
     right: 6.2%;
     border: none;
 }
+
 #login:hover{
     color: black;
     background-color: white;
     transition: 0.25s all ease;
 }
+
 button{
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.2);
 }  
+
 #signup:hover {
     color: black;
     border: solid 2px black;
     background-color: white;
     transition: 0.25s all ease;
 }
+
+
 body{
     margin: 0px;
     position: absolute;
 }
-
 
 #box1{
     position: absolute;
@@ -99,7 +103,7 @@ body{
 
 #meds{
     position: relative;
-    left: 10vw;height: 32vh; top: 19vh;
+    left: 10vw;width: 20vw; top: 19vh;
 }
 
 #box2{
@@ -116,8 +120,9 @@ body{
     position: absolute;
     z-index: 2;
     top: 100px;
-    left: 600px;
+    left: 37vw;
     width: 52vw;
+    font-size: 2.1vw;
 }
 
 #mail{
@@ -137,26 +142,28 @@ body{
 }
 
 #box1text{
-    width: 800px;
+    width: 60vw;
+    font-size: 2.22vw;
 }
 
 #footer{
     position: absolute;
+    width: 98.2vw;
     top: 1600px;
     height: 110px;
-    width: 1519px;
     border-top: solid black 2px;
+    left: 0.4vw;
 }
 
 #ab{
     position: absolute;
-    font-size: large;
+    font-size: 1.18vw;
     left: 80vw;
     top: 4.10vh;
 }
 #ab2{
     position: absolute;
-    font-size: large;
+    font-size: 1.18vw;
     left: 64vw;
     top: 4.10vh;
 }
