--- a/healnext/src/app/styles.css
+++ b/healnext/src/app/styles.css
@@ -175,33 +175,40 @@ h2{
 
 #healchat{
     position: fixed;
-    background-color: #0cc0df;
-    bottom: 2vh;
+    background-color: white;
+    bottom: 10vh;
     right: 2vw;
     border-radius: 20px;
-    border: solid black 2px;
+    border: solid black 1.5px;
     z-index: 10000000;
     text-align: center;
     color: white;
     height: 19vh;
-    width: 25.2vw;
+    width: 20.2vw;
+    box-shadow: 0px 1px 8px 2px rgba(0, 0, 0, 0.2);
 }
 
 #knowbetter{
-    font-size: 1.8rem;
-    padding-right: 15px;
+    position: relative;
+    font-size: 1.32rem;
+    top:1.2vh;
 }
 
 #healchatvisit{
-    font-size: 1.2rem;
-    padding: 12px;
-    background-color: black;
+    position: relative;
+    top: 2vh;
+    font-size: 1.0rem;
+    background-color: rgb(70, 212, 255);
     border-radius: 15px;
     align-items: center;
     transition: all 0.52s ease;
     color: white;
+    padding: 12px;
+    max-width: 12vw;
+    transition: background-color 0.32s ease;
 }
 
 #healchatvisit:hover{
-    scale: 1.08;
+    background-color: #0066FF;
 }
+
